# leaf-green-cpp

./: .clang_complete  .gitignore  .lvimrc  .travis.yml  CMakeLists.txt  LICENCE  README.md  compile.sh  main.cpp
assets/: background.tsx  decorations.tsx  hero_home_1f.json  hero_home_2f.json
assets/maps/: hero_home_1f.json
cmake/: FindSDL2.cmake  FindSDL2_Image.cmake
src/: CMakeLists.txt  bitmap_font.cpp  bitmap_font.hpp  blue_message_box_screen.hpp  collisions_layer.cpp  collisions_layer.hpp  content.hpp  custom_types.hpp  decorations.tsx  direction.cpp  direction.hpp  door.hpp  game.cpp  game.hpp  game_time.cpp  game_time.hpp  graphics.cpp  graphics.hpp  hero_home_1f.json  hero_home_2f.hpp  hero_home_2f.json  hint_box.cpp  hint_box.hpp  input.cpp  input.hpp  input_key.cpp  input_key.hpp  jsoncpp.cpp  keyboard_input.hpp  layer.hpp  main.cpp  map.cpp  map.hpp  map_collision.cpp  map_collision.hpp  map_json_source.cpp  map_json_source.hpp  map_offset.cpp  map_offset.hpp  map_screen.cpp  (+59 more)
src/json/: json.h
src/utf8/: checked.h  checked.hpp  core.hpp
src/utils/: string.cpp  string.hpp
test/: CMakeLists.txt  bitmap_font_test.cpp  collisions_layer_test.cpp  content_mock.hpp  game_time_test.cpp  gmock-gtest-all.cc  graphics_mock.hpp  graphics_test.cpp  input_mock.hpp  keyboard_input_mock.hpp  map_collision_test.cpp  map_json_source_test.cpp  map_offset_test.cpp  map_source_mock.hpp  map_test.cpp  menu_triangle_state_test.cpp  message_box_state_test.cpp  movement_timing_test.cpp  player_input_mock.hpp  player_movement_test.cpp  point_test.cpp  rectangle_test.cpp  runner.cpp  screen_manager_test.cpp  screen_mock.hpp  test_helper.cpp  test_helper.hpp  test_map.json  test_map_shuffled.json  texture_mock.hpp  tile_layer_test.cpp  tile_set_test.cpp  vector2_test.cpp  vector2f_test.cpp
test/utils/: string_test.cpp
